--- a/package.json
+++ b/package.json
@@ -7,15 +7,23 @@
     "start": "ts-node app.ts",
     "dev": "nodemon --exec ts-node app.ts"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": [
+    "social media",
+    "affordable social media",
+    "powerful social media",
+    "Nigerian social media management"
+  ],
+  "author": "ATCSC",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.5.1",
     "bcrypt": "^5.1.1",
     "cloudinary": "^1.40.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
+    "helmet": "^7.0.0",
     "http-status-codes": "^2.2.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.5.0",
@@ -25,6 +33,7 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/body-parser": "^1.19.2",
+    "@types/cors": "^2.8.14",
     "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/multer": "^1.4.7",
