--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "author": "ATCSC",
   "license": "ISC",
   "dependencies": {
+    "@types/cors": "^2.8.15",
     "axios": "^1.5.1",
     "bcrypt": "^5.1.1",
     "cloudinary": "^1.40.0",
