--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@types/node": "^20.5.9",
     "@types/nodemailer": "^6.4.9",
     "nodemon": "^3.0.1",
-    "ts-node": "^10.9.1"
+    "ts-node": "^10.9.1",
+    "typescript": "^5.2.2"
   }
 }
