--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "1.0.0",
   "description": "ActionSMM API Server",
   "main": "app.ts",
+  "type": "module",
   "scripts": {
-    "start": "ts-node app.ts",
+    "start": "node app.ts",
     "dev": "nodemon --exec ts-node app.ts"
   },
   "keywords": [
