--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,3 @@
 {
-  "builds": [{ "src": "app.ts", "use": "@vercel/node" }],
-  "routes": [{ "src": "/(.*)", "dest": "app.ts" }]
+  "rewrites": [{ "source": "/api/(.*)", "destination": "/api" }]
 }
